[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/tnt_input_engine/remap/code/joypanel.gd" type="Script" id=1]
[ext_resource path="res://addons/tnt_input_engine/remap/assets/spinner.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "rotate"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 359.0 ]
}

[node name="JoyPanel" type="Control"]
margin_right = 610.0
margin_bottom = 850.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 300.0
margin_bottom = 252.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="btnApply" type="Button" parent="Panel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = -52.0
margin_right = 75.0
margin_bottom = -12.0
disabled = true
text = "Apply"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnCancel" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -94.0
margin_top = -52.0
margin_right = -12.0
margin_bottom = -12.0
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblInfo_1" type="Label" parent="Panel"]
anchor_right = 1.0
margin_top = 19.0
margin_bottom = 33.0
text = "Remap analog joy on hardware Joypad.
Move desidered analog joy to remap."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblWait" type="Label" parent="Panel"]
modulate = Color( 0.392157, 0.866667, 0.192157, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -140.5
margin_top = 71.0
margin_right = 140.5
margin_bottom = 85.0
text = "...waiting..."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblResultLeft" type="Label" parent="Panel"]
modulate = Color( 0.498039, 0.721569, 1, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -140.5
margin_top = 101.0
margin_right = 140.5
margin_bottom = 115.0
text = "Move Left: --"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblResultUp" type="Label" parent="Panel"]
modulate = Color( 0.498039, 0.721569, 1, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -140.5
margin_top = 119.0
margin_right = 140.5
margin_bottom = 133.0
text = "Move Up: --"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spinner" type="Sprite" parent="Panel"]
position = Vector2( 93, 107 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel/Spinner"]
anims/RESET = SubResource( 1 )
anims/rotate = SubResource( 2 )

[node name="lblDeadZone" type="Label" parent="Panel"]
modulate = Color( 0.984314, 0.729412, 0.239216, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -140.5
margin_top = 147.0
margin_right = 140.5
margin_bottom = 161.0
text = "Dead Zone:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -78.5
margin_top = -89.0
margin_right = 78.5
margin_bottom = -67.0
min_value = 0.1
max_value = 0.6
step = 0.05
value = 0.1
tick_count = 12
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/btnApply" to="." method="_on_btnApply_pressed"]
[connection signal="pressed" from="Panel/btnCancel" to="." method="_on_btnCancel_pressed"]
